# lendo-interview

./: .gitignore  README.md  docker-compose.yml
service-application/: Dockerfile  docker-entrypoint.sh  pyproject.toml
service-application/db_init/: 01_init.sql  __init__.py
service-application/src/: constant.py  db.py  main.py  rmq_client.py  service.py
service-application/tests/: conftest.py  test_api.py
service-job/: Dockerfile  jobs.py  pyproject.toml
