[tool.poetry]
name = "lendo-interview"
version = "0.1.0"
description = ""
authors = ["Wei Wei <weiwei.alex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi-utils = "^0.2.1"
requests = "^2.28.1"
pika = "^1.3.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
aio-pika = "^8.1.1"
testcontainers = "^3.6.0"
pytest = "^7.1.2"
psycopg2-binary = "^2.9.3"
PyMySQL = "^1.0.2"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
fastapi = "^0.78.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
