
[tool.poetry]
name = "service-job"
version = "0.1.0"
description = ""
authors = ["Wei Wei <weiwei.alex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
retry = "^0.9.2"
pika = "^1.3.0"
httpx = "^0.23.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
